2014-05-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tex-site.el (TeX-modes-set): Use advice-add if available.
	* font-latex.el (font-latex-make-sectioning-faces): Don't rely on
	dynamic scoping for `num'.
	(font-latex-make-built-in-keywords): Don't use `eval' needlessly.
	(font-latex-doctex-syntactic-keywords): Declare before first use.
	(font-latex-match-command-with-arguments):
	Stay away from `add-to-list' on let-bound variables.
	(font-latex-match-command-in-braces): Remove unused var `end'.

2012-12-04  Tassilo Horn  <tsdh@gnu.org>

	Merge revno 314 (Stefan Monnier) from emacs elpa branch: Shorten
	copyright year ranges.

	* context.el:

	* doc/auctex.texi:

	* doc/changes.texi:

	* doc/install.texi:

	* font-latex.el:

	* latex.el:

	* style/letter.el:

	* tex-fold.el:

	* tex-jp.el:

	* tex.el:

2012-11-30  Ralf Angeli <angeli@caeruleus.net>

	* Version 11.87 released.

2012-11-30  Ralf Angeli  <angeli@caeruleus.net>

	* tex.el (TeX-evince-dbus-p): Make last change a little more
	conventional.

2012-11-30  Tassilo Horn  <tsdh@gnu.org>

	* tex.el (TeX-evince-dbus-p): Check for feature emacs in order not
	to signal an error on XEmacs.

2012-11-29  Ralf Angeli  <angeli@caeruleus.net>

	* RELEASE, configure.ac, doc/auctex.texi, doc/changes.texi,
	doc/install.texi, doc/tex-ref.tex: Update for upcoming release.

2012-11-26  Ralf Angeli  <angeli@caeruleus.net>

	* latex.el (LaTeX-split-bibs): Add doc string and use variable for
	Biber file extensions.
	(LaTeX-search-files-type-alist): Add entry for Biber.
	(BibTeX-Biber-global-files): Remove.
	(BibTeX-global-files): Reintroduce.
	(TeX-Biber-global-files): New variable.
	(TeX-arg-bibliography): Check if Biber or BibTeX is used and react
	accordingly.

	* tex-buf.el (TeX-check-files): Do not check duplicate extensions.
	(TeX-command-query, TeX-LaTeX-sentinel): Use separate variables
	for BibTeX and Biber file extensions.
	(TeX-synchronous-sentinel): Use `let' instead of `let*'.
